[package]
name = "gRPCService"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tonic-build = "0.10"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "gRPCService"
path = "src/main.rs"
